--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.26.1",
     "cra-template": "1.1.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-notifications-component": "^3.4.1",
+    "react-query": "^3.34.19",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "uuid": "^8.3.2"
   },
   "scripts": {
